Minor comment change.

--- a/KnR/ch_1/Makefile
+++ b/KnR/ch_1/Makefile
@@ -1,4 +1,4 @@
-# This is a generic Makefile.
+# This is a basic generic Makefile.
 #
 # To use:
 #	make name_of_c_file_but_without_suffix
@@ -6,7 +6,7 @@
 # For example:
 #	make test_1
 #
-#	I use gcc as my compiler, and I set all the warnings (for pedagogical reasons).
+#	I use gcc as my compiler, and I set all the warnings, as well as debug information (for pedagogical reasons).
 
 CC = gcc
 CFLAGS = -Wall -Wextra -g
