Cleans up the Makefile

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -1,12 +1,16 @@
-# This is a generic Makefile.
-#
-# To use:
-#	make name_of_c_file_but_without_suffix
-#
-# For example:
-#	make test_1
-#
-#	I use gcc as my compiler, and I set all the warnings (for pedagogical reasons).
-
 CC = gcc
-CFLAGS = -Wall -Wextra -g
+CFLAGS = -Wall -Wextra
+LDFLAGS =
+
+BIN_1 = regex-sub_1
+OBJ_1 = $(BIN_1).o sstring.o rematch.o
+
+$(BIN_1) : $(OBJ_1)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+$(BIN_1).o : $(BIN_1).c
+sstring.o : sstring.c sstring.h rematch.h
+rematch.o : rematch.c rematch.h
+
+.PHONY : clean
+clean :
+	rm *.o *[_-][1-9]
