--- a/KnR/ch_1/1.13/Makefile
+++ b/KnR/ch_1/1.13/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra
 LDFLAGS =
 
-BIN = 1-13
+BIN = 1-13_h
 OBJ = $(BIN).o
 
 
@@ -12,4 +12,4 @@ $(BIN).o : $(BIN).c
 
 .PHONY : clean
 clean :
-	rm *.o *[-][1-9][0-9]
+	rm *.o *-[1-9][0-9]_[hv]
