Init: solution to ex. 1-22

--- a/KnR/ch_1/1.22/Makefile
+++ b/KnR/ch_1/1.22/Makefile
@@ -8,6 +8,18 @@ $(BIN) : $(OBJ)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 $(BIN).o : $(BIN).c
 
+BIN = 1-22_v2
+OBJ = $(BIN).o
+$(BIN) : $(OBJ)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+$(BIN).o : $(BIN).c
+
+BIN = 1-22_v3
+OBJ = $(BIN).o
+$(BIN) : $(OBJ)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+$(BIN).o : $(BIN).c
+
 .PHONY : clean
 clean :
-	rm *.o *[-][1-9][0-9]
+	rm *.o *[0-9]
