--- a/KnR/ch_3/3.02/Makefile
+++ b/KnR/ch_3/3.02/Makefile
@@ -1,8 +1,14 @@
 CC = gcc
-CFLAGS = -Wall -Wextra #-g
+CFLAGS = -Wall -Wextra -g
 LDFLAGS =
 
-BIN = 3-2
+BIN = 3-2.1
+OBJ = $(BIN).o
+$(BIN) : $(OBJ)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+$(BIN).o : $(BIN).c
+
+BIN = 3-2.2
 OBJ = $(BIN).o
 $(BIN) : $(OBJ)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
@@ -16,4 +22,4 @@ $(BIN).o : $(BIN).c
 
 .PHONY : clean
 clean :
-	rm *.o *[0-9] newliner
+	rm *.o *[0-9]
