Renamed tconv_2 to tconv (lets the dir do the heavy lifting)

--- a/curios/t_conv/tconv_2/Makefile
+++ b/curios/t_conv/tconv_2/Makefile
@@ -4,19 +4,11 @@ LDFLAGS =
 
 OBJ = main.o tempcon.o sstring.o rematch.o
 
-tconv_1 : $(OBJ)
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $(OBJ)
-
-main.o : main.c tempcon.h sstring.h
-tempcon.o : tempcon.c tempcon.h sstring.h rematch.h
-sstring.o : sstring.c sstring.h rematch.h
-rematch.o : rematch.c rematch.h
-
-BIN_2 = tconv_2
-OBJ_2 = $(BIN_2).o
-$(BIN_2) : $(OBJ_2)
+BIN = tconv
+OBJ = $(BIN).o
+$(BIN) : $(OBJ)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) 
-$(BIN_2).o : $(BIN_2).c
+$(BIN).o : $(BIN).c
 
 .PHONY : clean
 clean :
