--- a/KnR/ch_5/5.07/Makefile
+++ b/KnR/ch_5/5.07/Makefile
@@ -2,18 +2,12 @@ CC = gcc
 CFLAGS = -Wall -Wextra -g
 LDFLAGS =
 
-BIN_1 = test_line_sort
-OBJ_1 = 5-7.o
-$(BIN_1) : $(OBJ_1)
+BIN = original_string_sort
+OBJ = $(BIN).o
+$(BIN) : $(OBJ)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
-$(OBJ_1).o : $(OBJ_1).c
-
-BIN_2 = original_string_sort
-OBJ_2 = $(BIN_2).o
-$(BIN_2) : $(OBJ_2)
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
-$(OBJ_2).o : $(OBJ_2).c
+$(OBJ).o : $(OBJ).c
 
 .PHONY : clean
 clean :
-	rm *.o $(BIN_1) $(BIN_2)
+	rm *.o $(BIN)
