Added rule for new_string_sort

--- a/KnR/ch_5/5.07/Makefile
+++ b/KnR/ch_5/5.07/Makefile
@@ -2,12 +2,18 @@ CC = gcc
 CFLAGS = -Wall -Wextra -g
 LDFLAGS =
 
-BIN = original_string_sort
-OBJ = $(BIN).o
-$(BIN) : $(OBJ)
+BIN_1 = original_string_sort
+OBJ_1 = $(BIN_1).o
+$(BIN_1) : $(OBJ_1)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
-$(OBJ).o : $(OBJ).c
+$(OBJ_1).o : $(OBJ_1).c
+
+BIN_2 = new_string_sort
+OBJ_2 = $(BIN_2).o
+$(BIN_2) : $(OBJ_2)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+$(OBJ_2).o : $(OBJ_2).c
 
 .PHONY : clean
 clean :
-	rm *.o $(BIN)
+	rm *.o $(BIN_1) $(BIN_2)
