Rule for test_original_string_sort

--- a/KnR/ch_5/5.07/Makefile
+++ b/KnR/ch_5/5.07/Makefile
@@ -14,6 +14,12 @@ $(BIN_2) : $(OBJ_2)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 $(OBJ_2).o : $(OBJ_2).c
 
+BIN_3 = test_original_string_sort
+OBJ_3 = $(BIN_3).o
+$(BIN_3) : $(OBJ_3)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+$(OBJ_3).o : $(OBJ_3).c
+
 .PHONY : clean
 clean :
-	rm *.o $(BIN_1) $(BIN_2)
+	rm *.o $(BIN_1) $(BIN_2) $(BIN_3)
