--- a/KnR/ch_5/5.09/Makefile
+++ b/KnR/ch_5/5.09/Makefile
@@ -3,8 +3,8 @@ CFLAGS = -Wall -Wextra -g
 LDFLAGS =
 
 BIN = demo
-OBJ = 5-9.o
-$(BIN) : $(OBJ)
+OBJ = 5-9
+$(BIN) : $(OBJ).o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 $(OBJ).o : $(OBJ).c
 
