Init: I was confused by 5-18's prompt, so here I play with the Answer Book solution

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -73,6 +73,11 @@ OBJ_12 = $(BIN_12).o getch_1.o
 $(BIN_12) : $(OBJ_12)
 	$(CC) $(CFLAGS) $(CCFLAGS) -o $@ $^
 
+BIN_13 = cdcl_2
+OBJ_13 = $(BIN_13).o getch_1.o
+$(BIN_13) : $(OBJ_13)
+	$(CC) $(CFLAGS) $(CCFLAGS) -o $@ $^
+
 getch_1.o : getch_1.c
 sstring.o : sstring.c sstring.h rematch.h
 rematch.o : rematch.c rematch.h
